--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,36 @@
-# Compiled class file
-*.class
+// Define a class for the application
+public class GitHubApplication {
 
-# Log file
-*.log
+    // Define a method to create a new repository
+    public void createRepository(String repoName) {
+        System.out.println("Creating repository: " + repoName);
+        // Add code to create a new repository on GitHub
+    }
 
-# BlueJ files
-*.ctxt
+    // Define a method to add a new file to the repository
+    public void addFile(String fileName) {
+        System.out.println("Adding file: " + fileName);
+        // Add code to add a new file to the repository
+    }
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+    // Define a method to commit changes to the repository
+    public void commitChanges(String commitMessage) {
+        System.out.println("Committing changes: " + commitMessage);
+        // Add code to commit changes to the repository
+    }
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+    // Define a method to deploy the application
+    public void deployApplication() {
+        System.out.println("Deploying application...");
+        // Add code to deploy the application
+    }
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+    // Main method to demonstrate the application
+    public static void main(String[] args) {
+        GitHubApplication app = new GitHubApplication();
+        app.createRepository("my-new-repo");
+        app.addFile("(link unavailable)");
+        app.commitChanges("Initial commit");
+        app.deployApplication();
+    }
+}
